# DeepLearningEFI

./: .gitignore  01_intro.qmd  01_intro_slides.qmd  02_data.qmd  03_train.qmd  04_evaluation.qmd  05_examples.qmd  README.md  _quarto.yml  compute_lidar_metrics.qmd  index.qmd  index_slides.qmd  pyproject.toml  python_environment_setup.md  random_forest.ipynb  random_forest.qmd  schedule.qmd  setup.qmd  styles.css
.ipynb_checkpoints/: 05_examples-checkpoint.qmd  index-checkpoint.qmd
04_evaluation_files/execute-results/: html.json
_freeze/02_data/execute-results/: html.json
_freeze/03_train/execute-results/: html.json
_freeze/04_evaluation/execute-results/: html.json
_freeze/compute_lidar_metrics/execute-results/: html.json
docs/: 01_intro.html  01_intro_slides.html  02_data.html  03_train.html  04_evaluation.html  05_examples.html  compute_lidar_metrics.html  index.html  index_slides.html  pyproject.toml  python_environment_setup.html  random_forest.html  schedule.html  search.json  setup.html  sitemap.xml  t_eval.html  wandb.js
preprocess_no/: las_to_npy_batch.py
src/: README.md  bash_cls_log.txt  bash_reg_log.txt  config.py  install.sh  plot_regression.py  predict.py  regression_utils.py  test.py  train.py  train.sh  train_ddp.sh  train_pl.py  train_reg.sh
src/dataset/: Petawawa.py  data_utils.py  efi_datamodule.py  efi_dataset.py  ocnn_utils.py
src/models/: dgcnn.py  efi_modelmodule.py  heads.py  loss_utils.py  metrics.py  ocnn.py  ocnn_lenet.py  pointnet.py  pointnet2_msg.py  pointnet2_ssg.py  pointnext.py
src/utils/: logger.py
(+15 files in other folders)
